samples/_failures_safe/1761460190_b50395_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53291702.c: In function ‘main’:
./samples/SAFE/__tmp_53291702.c:154:12: error: missing terminating " character
  154 |     printf("Enter start and end nodes
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_53291702.c:154:5: error: expected expression at end of input
  154 |     printf("Enter start and end nodes
      |     ^~~~~~
./samples/SAFE/__tmp_53291702.c:154:5: error: expected declaration or statement at end of input
